--- a/index.html
+++ b/index.html
@@ -207,9 +207,8 @@
 		</div>
 		<br/>
 		<div style="font-size: 70%;"><!-- Social -->
-			<!--<a href="http://twitter.com/share?url=http://sortblocks.1eko.com/&text=SortBlocks puzzle game" target="_blank"><img src="tsbutton.png" alt="Twitter" /></a>
-			<a href="http://www.facebook.com/sharer.php?u=http://sortblocks.1eko.com/" target="_blank"><img src="fbsbutton.png" alt="Facebook" /></a>
-			-->
+			<a href="http://twitter.com/share?url=https://stepdub.github.io/sortblocks/&text=SortBlocks puzzle game" target="_blank"><img src="tsbutton.png" alt="Twitter" /></a>
+			<a href="http://www.facebook.com/sharer.php?u=https://stepdub.github.io/sortblocks/" target="_blank"><img src="fbsbutton.png" alt="Facebook" /></a>
 		</div>
 		<p></p>
 	</div>
@@ -221,5 +220,19 @@
 	<script type="text/javascript">
 		show_wins();
 	</script>
+	<!-- Start of StatCounter Code for Default Guide -->
+	<script type="text/javascript">
+		var sc_project=11202331; 
+		var sc_invisible=1; 
+		var sc_security="aa6d739a"; 
+		var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
+		document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+ "statcounter.com/counter/counter.js'></"+"script>");
+	</script>
+	<noscript><div class="statcounter">
+		<a title="web analytics" href="http://statcounter.com/" target="_blank">
+			<img class="statcounter" src="//c.statcounter.com/11202331/0/aa6d739a/1/" alt="web analytics">
+		</a>
+	</div></noscript>
+	<!-- End of StatCounter Code for Default Guide -->
 </body>
 </html>
