--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<meta name="description" content="Play a simple puzzle game." />
 	<meta name="keywords" content=" puzzle, game, play " />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<title>SortBlocks</title>
 	<script type="text/javascript" src="sortblocks5.js"></script>
