--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
 		.epbtn, .mpbtn, .hpbtn, .vpbtn {
 			padding: 2px 25px !important;
 			color: #333;
-			//border-radius: 100px;
+			border-radius: 20px;
 			border-width: 2px;
 			border-style: solid;
-			-moz-border-radius: 20px;
-			-webkit-border-radius: 20px;
 			margin: 5px;
 		}			
 		.epbtn {
@@ -114,6 +112,19 @@
 			//padding: 2px 5px 0px !important;
 			color: #A0A0A0
 		}
+		.next_btn {
+			//font-size: 150% !important;
+			//font-weight: bold;
+			background-color: rgb(0,0,0,0.5);
+			border-radius: 20px;
+			border-width: 2px;
+			border-style: solid;
+			border-color: black;
+			//margin-top: 5px;
+			//margin-bottom: 0px;
+			//padding: 2px 5px 0px !important;
+			color: #A0A0A0
+		}
 		#play_exit {
 			float: left;
 		}
@@ -126,8 +137,9 @@
 	        left: 50%;
 	        transform: translate(-50%, -50%);
 	        background-color: rgb(0,0,0,0.5);
-	        padding: 3rem;
+	        padding: 2rem;
 	        border-radius: 1.5rem;
+	        //display: hidden;
 	        //opacity: 1;
 	        //visibility: visible;
 	    }
@@ -250,8 +262,8 @@
 			<br/>
 			<canvas id="canv" width="800" height="800"></canvas>
 			<div id="next_level">
-				<div style="font-size:600%">✔</div>
-				<input title="Play Next Level" id="next_btn" class="next_btn_class" type="button" value="Next Level→" onclick="game.next_level()" />
+				<div style="font-size:600%; color: #2FD035;">✔</div>
+				<input title="Play Next Level" class="next_btn" type="button" value="Next Level→" onclick="game.next_level()" />
 			</div>
 		</div>
 	</div>
