--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 	        left: 50%;
 	        transform: translate(-50%, -50%);
 	        background-color: rgb(0,0,0,0.5);
-	        padding: 2rem;
+	        padding: 0 2rem;
 	        border-radius: 1.5rem;
 	        //display: hidden;
 	        //opacity: 1;
